Bug 246928 - Crash on related record
Summary: Crash on related record
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.2.1 (KOffice 2.2.1)
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
: 255134 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-06 18:56 UTC by hector
Modified: 2012-08-11 11:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Kexi 2.4.0 (Calligra 2.4.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hector 2010-08-06 18:56:54 UTC
Application: kexi (2.2.1 (KOffice 2.2.1))
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-24-generic x86_64
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
I've just started to test the new kexi.
I've created only 2 simply tables and i wan't to like them.
I'dont know how to link tables on kexi (sqlite), i've just test (no find information how to link table/records) on table/view data and kexe crash at that point.

The crash can be reproduced every time.

 -- Backtrace:
Application: Kexi (kexi), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd2384647a0 (LWP 7831))]

Thread 2 (Thread 0x7fd2245a8710 (LWP 7833)):
#0  0x00007fd236d3df83 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fd2337034a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007fd2337038fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007fd23717e566 in QEventDispatcherGlib::processEvents (this=0x2ccfe60, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007fd237153992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007fd237153d6c in QEventLoop::exec (this=0x7fd2245a7d70, flags=) at kernel/qeventloop.cpp:201
#6  0x00007fd23705dd59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007fd237134178 in QInotifyFileSystemWatcherEngine::run (this=0x2cfaa60) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fd237060775 in QThreadPrivate::start (arg=0x2cfaa60) at thread/qthread_unix.cpp:248
#9  0x00007fd233bbe9ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007fd236d4a6fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fd2384647a0 (LWP 7831)):
[KCrash Handler]
#5  0x00007fd230dfba49 in KexiDataAwareObjectInterface::columnType(int) () from /usr/lib/libkexidatatable.so.7
#6  0x00007fd230e0c1ef in KexiTableView::contentsMousePressEvent(QMouseEvent*) () from /usr/lib/libkexidatatable.so.7
#7  0x00007fd234f7e08b in Q3ScrollView::viewportMousePressEvent (this=0x2cd3800, e=0x7fffd2a163f0) at widgets/q3scrollview.cpp:1746
#8  0x00007fd234f7f98e in Q3ScrollView::eventFilter (this=0x2cd3800, obj=0x31dd670, e=0x7fffd2a163f0) at widgets/q3scrollview.cpp:1474
#9  0x00007fd230e083ac in KexiTableView::eventFilter(QObject*, QEvent*) () from /usr/lib/libkexidatatable.so.7
#10 0x00007fd237154487 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x31dd670, event=0x7fffd2a163f0) at kernel/qcoreapplication.cpp:819
#11 0x00007fd2376281fc in QApplicationPrivate::notify_helper (this=0x2422150, receiver=0x31dd670, e=0x7fffd2a163f0) at kernel/qapplication.cpp:4296
#12 0x00007fd23762eecb in QApplication::notify (this=0x241e280, receiver=0x31dd670, e=0x7fffd2a163f0) at kernel/qapplication.cpp:3865
#13 0x00007fd2349f1526 in KApplication::notify (this=0x241e280, receiver=0x31dd670, event=0x7fffd2a163f0) at ../../kdeui/kernel/kapplication.cpp:302
#14 0x00007fd23715506c in QCoreApplication::notifyInternal (this=0x241e280, receiver=0x31dd670, event=0x7fffd2a163f0) at kernel/qcoreapplication.cpp:704
#15 0x00007fd23762e0ae in QCoreApplication::sendEvent (receiver=0x31dd670, event=0x7fffd2a163f0, alienWidget=0x31dd670, nativeWidget=0x31e1620, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#16 QApplicationPrivate::sendMouseEvent (receiver=0x31dd670, event=0x7fffd2a163f0, alienWidget=0x31dd670, nativeWidget=0x31e1620, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:2965
#17 0x00007fd2376ae3dd in QETWidget::translateMouseEvent (this=0x31e1620, event=<value optimized out>) at kernel/qapplication_x11.cpp:4302
#18 0x00007fd2376ac8ac in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffd2a16d10) at kernel/qapplication_x11.cpp:3501
#19 0x00007fd2376d8882 in x11EventSourceDispatch (s=0x2425420, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#20 0x00007fd2336ff8c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#21 0x00007fd233703748 in ?? () from /lib/libglib-2.0.so.0
#22 0x00007fd2337038fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#23 0x00007fd23717e513 in QEventDispatcherGlib::processEvents (this=0x23fc1f0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#24 0x00007fd2376d846e in QGuiEventDispatcherGlib::processEvents (this=0x2cd3850, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x00007fd237153992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#26 0x00007fd237153d6c in QEventLoop::exec (this=0x7fffd2a17040, flags=) at kernel/qeventloop.cpp:201
#27 0x00007fd237157aab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#28 0x0000000000400929 in _start ()

Reported using DrKonqi
Comment 1 Jarosław Staniek 2010-08-07 20:43:15 UTC
Regarding defining master-child relationships, please read e.g. here http://www.mail-archive.com/kexi@kde.org/msg00358.html

We have not yet found a contributor willing to fill the documentation regarding this feature. Or better a tutorial - http://userbase.kde.org/Kexi/Tutorials
Comment 2 Jarosław Staniek 2011-05-21 00:33:31 UTC
*** Bug 255134 has been marked as a duplicate of this bug. ***
Comment 3 Jarosław Staniek 2012-03-13 13:57:55 UTC
Need more info - does Kexi 2.3 or newer crash for you in this area?
Alternatively please provide step-by-step what actions you have performed before the crash.
Comment 4 Jarosław Staniek 2012-03-13 23:06:13 UTC
Git commit 9408a8234ac6096736862a859f43dc34190b8ff2 by Jaroslaw Staniek.
Committed on 13/03/2012 at 23:57.
Pushed by staniek into branch 'master'.

Fix deep copying of KexiDB query schema and ORDER BY structures

KexiDB
*Fix deep copying of query schema and ORDER BY structures
**This removes crashes related, e.g. in reports based on queries with joins
Related: bug 281737

FIXED-IN: Kexi 2.4.0 (Calligra 2.4.0)

M  +67   -43   kexi/kexidb/queryschema.cpp
M  +9    -5    kexi/kexidb/queryschema.h

http://commits.kde.org/calligra/9408a8234ac6096736862a859f43dc34190b8ff2
Comment 5 hector 2012-03-14 17:55:16 UTC
It's ok, thanks
Comment 6 Jarosław Staniek 2012-03-18 20:15:57 UTC
Git commit f0992d35f4ab90593c4c427276de49e4a864c29e by Jaroslaw Staniek.
Committed on 18/03/2012 at 21:14.
Pushed by staniek into branch 'master'.

KexiDB: Properly deep-copy query asterisks when cloning query objects

*This fixes crash for reports based on queries
REVIEW:104266

M  +8    -0    kexi/doc/dev/CHANGELOG-Kexi-js
M  +1    -0    kexi/kexidb/field.cpp
M  +21   -2    kexi/kexidb/queryschema.cpp
M  +2    -0    kexi/kexidb/queryschema.h

http://commits.kde.org/calligra/f0992d35f4ab90593c4c427276de49e4a864c29e
Comment 7 Jarosław Staniek 2012-03-18 20:16:38 UTC
Git commit 1ed7070a5181406469709e41db386f24a6fb9aea by Jaroslaw Staniek.
Committed on 13/03/2012 at 23:57.
Pushed by staniek into branch 'calligra/2.4'.

Fix deep copying of KexiDB query schema and ORDER BY structures

KexiDB
*Fix deep copying of query schema and ORDER BY structures
**This removes crashes related, e.g. in reports based on queries with joins
Related: bug 281737

FIXED-IN: Kexi 2.4.0 (Calligra 2.4.0)

M  +67   -43   kexi/kexidb/queryschema.cpp
M  +9    -5    kexi/kexidb/queryschema.h

http://commits.kde.org/calligra/1ed7070a5181406469709e41db386f24a6fb9aea
Comment 8 Jarosław Staniek 2012-03-18 20:16:38 UTC
Git commit 98de806be812867d6ad18ee39786fe7fa9b9b514 by Jaroslaw Staniek.
Committed on 18/03/2012 at 21:13.
Pushed by staniek into branch 'calligra/2.4'.

KexiDB: Properly deep-copy query asterisks when cloning query objects

*This fixes crash for reports based on queries

FIXED-IN: Kexi 2.4.0 (Calligra 2.4.0)
REVIEW: 104266

M  +8    -0    kexi/doc/dev/CHANGELOG-Kexi-js
M  +1    -0    kexi/kexidb/field.cpp
M  +21   -2    kexi/kexidb/queryschema.cpp
M  +2    -0    kexi/kexidb/queryschema.h

http://commits.kde.org/calligra/98de806be812867d6ad18ee39786fe7fa9b9b514
Comment 9 Jarosław Staniek 2012-06-27 11:28:25 UTC
Git commit e60656ccb660a092fd83fb790fc31db449072047 by Jaroslaw Staniek.
Committed on 27/06/2012 at 11:40.
Pushed by staniek into branch 'master'.

Predicate: Fix deep copying of query schema and ORDER BY structures

*This removes crashes related, e.g. in reports based on queries with joins
*(2012-03-13 calligra master commit 9408a8234ac60)
Related: bug 281737

DIGEST: All improvements ported from KexiDB connectivity library to Predicate (http://community.kde.org/Predicate).

M  +71   -50   Predicate/QuerySchema.cpp
M  +10   -6    Predicate/QuerySchema.h

http://commits.kde.org/predicate/e60656ccb660a092fd83fb790fc31db449072047
Comment 10 Jarosław Staniek 2012-06-27 11:28:42 UTC
Git commit d45e5edf9ad23ed16fdeaa1e41b22fff928db92e by Jaroslaw Staniek.
Committed on 27/06/2012 at 12:19.
Pushed by staniek into branch 'master'.

Properly deep-copy query asterisks when cloning query objects

*This fixes crash for reports based on queries
*(2012-03-18 calligra master commit f0992d35f4ab9)

M  +17   -4    Predicate/QuerySchema.cpp
M  +3    -0    Predicate/QuerySchema.h

http://commits.kde.org/predicate/d45e5edf9ad23ed16fdeaa1e41b22fff928db92e