Fix deep copying of KexiDB query schema and ORDER BY structures

KexiDB
*Fix deep copying of query schema and ORDER BY structures
**This removes crashes related, e.g. in reports based on queries with joins
BUG:246928
BUG:281737

FIXED-IN: Kexi 2.4.0 (Calligra 2.4.0)